--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -1,19 +1,92 @@
-.main{
+.main {
   height: 50vh;
-  height: calc( var(--vh, 1vh) * 50);
+  height: calc(var(--vh, 1vh) * 50);
+  background-color: $white;
+  .row {
+    flex-direction: column;
+    justify-content: center;
+    h2 {
+      font-size: 3rem;
+      line-height: 4.2rem;
+      font-weight: 700;
+      color: $white;
+      z-index: 10;
+      mix-blend-mode: difference;
+      @include media("<=tablet") {
+        font-size: 2.4rem;
+        line-height: 3rem;
+      }
+      @include media("<=phone") {
+        font-size: 1.7rem;
+        line-height: 2.2rem;
+        margin-top: 72px;
+      }
+      .line {
+        margin-bottom: 8px;
+        height: 56px;
+        position: relative;
+        overflow: hidden;
 
-  .row{
-    h2{
-      .line{
-        span{
+        @include media("<=tablet") {
+          height: 48px;
+        }
 
+        @include media("<=phone") {
+          height: 32px;
+        }
+        span {
+          position: absolute;
         }
       }
     }
 
-    .btn-row{
-      a{
+    .btn-row {
+      width: 256px;
+      position: relative;
+      z-index: 2;
+      a {
+        display: flex;
+        align-items: center;
+        color: $black;
+        font-weight: 600;
         text-decoration: none;
+        font-size: 1.6rem;
+
+        @include media("<=tablet") {
+          font-size: 1.3rem;
+        }
+
+        @include media("<=phone") {
+          font-size: 1.1rem;
+        }
+        svg {
+          margin-left: 16px;
+          border: 2px solid $black;
+          padding: 12px;
+          height: 24px;
+          width: 24px;
+          border-radius: 100px;
+          transition: 0.4s ease-in-out;
+
+          @include media("<=tablet") {
+            padding: 6px;
+            height: 20px;
+            width: 20px;
+          }
+
+          @include media("<=phone") {
+            padding: 4px;
+            height: 16px;
+            width: 16px;
+          }
+        }
+
+        &:hover {
+          svg {
+            background-color: $black;
+            color: $white;
+          }
+        }
       }
     }
   }
