--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,14 +1,14 @@
-.header{
+.header {
   position: fixed;
   width: 100%;
-  height: 128px;
+  height: 118px;
   z-index: 4;
-  @include media('<=phone'){
-    height: 96px;
+  @include media("<=phone") {
+    height: 86px;
   }
-  .container{
-    .logo{
-      a{
+  .container {
+    .logo {
+      a {
         font-size: 1.2rem;
         text-decoration: none;
         letter-spacing: 0.5rem;
@@ -17,19 +17,47 @@
       }
     }
 
-    .nav{
-      width: 25px;
-      @include media('<=phone'){
-        width: 20px;
+    .nav-toggle {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      position: relative;
+
+      @include media("<=tablet") {
+        margin-right: 24px;
       }
 
-      span{
-        height: 2px;
-        margin-bottom: 0.3rem;
-        background-color: $black;
-        display: block;
+      @include media("<=phone") {
+        margin-right: 16px;
+      }
+      .hamburger-menu {
+        width: 25px;
+        @include media("<=phone") {
+          width: 20px;
+        }
+
+        span {
+          height: 2px;
+          margin-bottom: 0.3rem;
+          background-color: $black;
+          display: block;
+        }
+      }
+      .hamburger-menu-closed {
+        position: absolute;
+        display: none;
+
+        svg {
+          @include media("<=tablet") {
+            width: 56px;
+          }
+
+          @include media("<=phone") {
+            width: 48px;
+          }
+        }
       }
     }
   }
-
 }
